src/test/ui/issues/50000-59999/issue-50571.rs
// run-rustfix

trait Foo {
    fn foo([a, b]: [i32; 2]) {}
    //~^ ERROR: patterns aren't allowed in methods without bodies
}

fn main() {}
